🎨 style(custom.css): update ion-icon color for dark theme to improve visibility 🎨 style(custom.css): update ion-icon color for light theme to improve visibility 🎨 style(custom.css): update footer background color to improve aesthetics 🎨 style(custom.css): update footer text color to improve readability 🐛 fix(posts_controller.rb): remove unnecessary return statement in show action 🎨 style(application.html.erb): change data-theme attribute to light for better default theme 🎨 style(posts/show.html.erb): remove estimated reading time from post view 🎨 style(shared/_footer.html.erb): update footer text to uppercase and remove year 🐛 fix(visits_home_page_spec.rb): update footer text in test to match updated footer 🐛 fix(visits_posts_page_spec.rb): disable failing tests for estimated reading time

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -31,7 +31,14 @@ nav ul li strong {
 
 ion-icon {
   font-size: 30px;
+}
+
+:not([data-theme=light]) ion-icon {
   color: #fff;
+}
+
+:not([data-theme=dark]) ion-icon {
+  color: #000 !important;
 }
 
 audio {
@@ -39,7 +46,7 @@ audio {
 }
 
 [data-category]:before {
-  background: #ff00a6;
+  background: #2b081f;
   content   : attr(data-category);
 }
 
@@ -103,5 +110,9 @@ td {
 }
 
 footer {
-  background-color: #18242c;
+  background-color: #000;
+}
+footer p {
+  color: #fff !important;
+
 }
